Fixed implementation into JavaFx template, red pulsating square of doom